test/bad/syntax2.prog
//missing ',' in with
f x = match x with {
    h:t -> h + 1
    [] -> 1
}
